docs: agregar documentación a todos los servicios y controladores